docs/api/qiskit/0.19/qiskit.circuit.library.C4XGate.mdx
---
title: C4XGate (v0.19)
description: API reference for qiskit.circuit.library.C4XGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.C4XGate
---

# C4XGate

<Class id="qiskit.circuit.library.C4XGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="C4XGate(label=None, ctrl_state=None)" modifiers="class">
  The 4-qubit controlled X gate.

  This implementation is based on Page 21, Lemma 7.5, of \[1].

  **References**

  \[1] Barenco et al., 1995. [https://arxiv.org/pdf/quant-ph/9503016.pdf](https://arxiv.org/pdf/quant-ph/9503016.pdf)

  Create a new 4-qubit controlled X gate.

  ## Attributes

  <span id="c4xgate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.C4XGate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="c4xgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.C4XGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="c4xgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.C4XGate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="c4xgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.C4XGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="c4xgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.C4XGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="c4xgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.C4XGate.add_decomposition" signature="C4XGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="c4xgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.C4XGate.assemble" signature="C4XGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="c4xgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.C4XGate.broadcast_arguments" signature="C4XGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="c4xgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.C4XGate.c_if" signature="C4XGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="c4xgate-control" />

  ### control

  <Function id="qiskit.circuit.library.C4XGate.control" signature="C4XGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="c4xgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.C4XGate.copy" signature="C4XGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="c4xgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.C4XGate.inverse" signature="C4XGate.inverse()">
    Invert this gate. The C4X is its own inverse.
  </Function>

  <span id="c4xgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.C4XGate.is_parameterized" signature="C4XGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="c4xgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.C4XGate.mirror" signature="C4XGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="c4xgate-power" />

  ### power

  <Function id="qiskit.circuit.library.C4XGate.power" signature="C4XGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="c4xgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.C4XGate.qasm" signature="C4XGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="c4xgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.C4XGate.repeat" signature="C4XGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="c4xgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.C4XGate.to_matrix" signature="C4XGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

